--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "lint": "eslint .",
+  "format": "prettier --write .",
+  "format-check": "prettier --check .",
+  "start": "npm run format-check && npm run lint && node index.js"
   },
   "keywords": [],
   "author": "",
