--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "lint": "eslint .",
-  "format": "prettier --write .",
-  "format-check": "prettier --check .",
-  "start": "npm run format-check && npm run lint && node index.js"
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
+    "start": "npm run format-check && npm run lint && node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "eslint": "^9.16.0",
     "prettier": "^3.4.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0"
   }
 }
